# chess-master

./: .gitignore  AI_AGENTS_SUMMARY.md  CHESS_APP_TEST_REPORT.md  CHESS_TEACHING_BENCHMARK.md  CHESS_UI_RESEARCH_ANALYSIS.md  EC2_OLLAMA_DEPLOYMENT_PLAN.md  FIXES_IMPLEMENTED.md  FRONTEND_BACKEND_CONNECTION.md  FRONTEND_TESTING_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INTEGRATION_SUMMARY.md  MISTRAL_OFFLINE_CHESS_GUIDE.md  MOBILE_AI_CHESS_EXPERIENCE.md  MULTIPLAYER_DESIGN.md  MULTIPLAYER_TEST_RESULTS.md  OFFLINE_UX_EDGE_CASES.md  OLLAMA_SETUP_GUIDE.md  README.md  UX_CURRENT_STATE.md  UX_FLOW_ANALYSIS.md  UX_FLOW_TESTING_REPORT.md  VISUAL_TEST_SUMMARY.md  chess_self_play.html  multiplayer_chess_ui.html  offline_ux_demo.html  realistic_chess_demo.html  research_based_chess_ui.html  roadmap.md  test_all_endpoints.sh  test_multiplayer_demo.html  test_offline_mode.js  test_ux_flow.html  test_web_interface.html  test_websocket.html
ChessApp/: AI_ALGORITHM_EXPLANATION.md  App.tsx  OFFLINE_AI_OPTIONS.md  README.md  app.json  jest.config.js  metro.config.js  package-lock.json  package.json  setup-backend-connection.sh  test_integration.js  tsconfig.json
ChessApp/__tests__/: eval.test.ts
ChessApp/docs/: ANDROID_SETUP.md  APP_REVAMP_ANALYSIS.md  BEFORE_AFTER_COMPARISON.md  CHESS_MODEL_ACTION_PLAN.md  CHESS_MODEL_COMPARISON.md  CHESS_MODEL_IMPLEMENTATION_PLAN.md  CHESS_MODEL_LICENSE_REPORT.md  IMPLEMENTATION_STATUS.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  PRESIDENTIAL_MODE_SETUP.md  REVAMP_TECHNICAL_GUIDE.md  STORE_SETUP.md  TINY_LLM_TECHNICAL_DETAILS.md  tiny_llm_demo.js
ChessApp/ios/ChessApp/: Info.plist
ChessApp/scripts/: convert_rookworld_to_onnx.py
ChessApp/src/agents/: ChessAgentSystem.tsx
ChessApp/src/components/: AICoachChat.tsx  AIPersonalitySelector.tsx  AnimatedChessBoard.tsx  ChessBoard.tsx  CoachView.tsx  DailyChallenge.tsx  ErrorBoundary.tsx  FloatingActionButton.tsx  LoadingOverlay.tsx  ModelDownloadScreen.tsx  MoveExplanation.tsx  OfflineIndicator.tsx  (+5 more)
ChessApp/web-test/: index.html  package-lock.json  package.json
backend/: .env  Cargo.toml  Dockerfile  test_backend.sh
backend/migrations/: 001_initial_schema.sql  002_add_premium_support.sql
backend/src/: ai.rs  chess_engine.rs  config.rs  db.rs  main.rs  models.rs  puzzle_database.rs
backend/src/api/: ai.rs  auth.rs  chess.rs  mod.rs  training.rs  users.rs
backend/src/services/: ollama_client.rs
backend/src/websocket/: chat.rs  game.rs  lobby.rs  mod.rs  multiplayer.rs
deploy/: ec2-ollama-setup.sh
(+70 files in other folders)
