[package]
name = "chess-app"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.40", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
hyper = "1.0"

# Database - Using 0.7 to avoid edition2024 issues
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate", "macros"] }

# Chess Engine & Logic
chess = "3.2"
shakmaty = "0.25"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication & Security
jsonwebtoken = "8.3"
bcrypt = "0.14"
uuid = { version = "1.10", features = ["v4", "serde"] }

# AI & MCP Integration
reqwest = { version = "0.11", features = ["json"] }
ollama-rs = "0.2"
async-trait = "0.1"
lru = "0.12"

# WebSocket Support
axum-extra = { version = "0.9", features = ["typed-header"] }
futures = "0.3"

# Utilities
chrono = { version = "0.4.31", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Configuration
config = "0.13"
dotenvy = "0.15"
lazy_static = "1.4"

# Development Dependencies
[dev-dependencies]
tokio-test = "0.4"
